--- a/cursos/src/app/app.component.html
+++ b/cursos/src/app/app.component.html
@@ -1,5 +1,12 @@
 
  
+
+<!--router-outlet></router-outlet-->
+
+<list-cursos></list-cursos>
+
+
+
     <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
