--- a/cursos/src/app/tabelas-basicas/matriculados/list-matriculas.component.html
+++ b/cursos/src/app/tabelas-basicas/matriculados/list-matriculas.component.html
@@ -1,5 +1,16 @@
 
 
+
+<ul>
+
+<li *ngFor="let curso of cursos">
+ {{curso}}
+</li>
+
+</ul>
+
+<input (click)="listarCursos()" type="button" name="Obyer" value=" Obter cursos ">
+
 <br>
 <br>
 <br>
