--- a/cursos/src/app/app.component.html
+++ b/cursos/src/app/app.component.html
@@ -1,8 +1,7 @@
 
- 
+<router-outlet></router-outlet>
 
-<!--router-outlet></router-outlet-->
-
+<!--
 <list-cursos></list-cursos>
 
 
@@ -22,3 +21,4 @@
     <button (click)="efetuarLogin()" class="btn btn-lg btn-primary btn-block" type="button">Sign in</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
  
+-->
